examples/v0.3/errors/invalid_index_type.nova
/*
Expected Error

Array index must be numeric.
*/

numbers: [N] = [
    1,
    2,
    3
]

print(numbers["hello"])